style.css
* {
    padding: 0;
    margin: 0;
}



.navdiv{
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    transform: translate(0%,100%);


}

.navlinks li{
    display: inline-block;
    padding: 0px 20px;
    color: white;
}

.logo {
    
    transform: translate(20%,0%);
    color: white;
    transition: 0.5s;
}

.logo  :hover{
    color: #C3492C;
    transform: scale(1.1);
    transition: 0.2s;
}


.navlinks ul li::after{
    content: '';
    width: 0%;
    height: 2px;
    background: #C3492C;
    display: block;
    margin: auto;
    transition: 0.5s;

}

.navlinks ul li:hover::after {
    width: 100%;
}

.titlecontent{
    display: flex;
    align-items: center;
    flex-wrap: wrap;
}

.titlecontent{

    color: white;
    position: absolute;
    top: 50%;
    left: 50%;
    text-align: center;
    transform: translate(-50%,-70%);
    font-size: xx-large;
    
}

a{
    text-decoration: none;
    color: white;
    font-size: 20px;
}

.homepage-card {

    width: 32.5%;
    background-color: #f0f0f0;
    border-radius: 8px;
    overflow: hidden;
    box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
    margin: 20px;
    max-height:20%;
}

.homepage-card img {
    width: 100%;
    height: auto;
}

.card-content {
    padding: 16px;
}

.card-content h2 {
    font-size: 30px;
    margin-bottom: 8px;
}

.card-content .homepagebutton {
    display: inline-block;
    padding: 8px 16px;
    background-color: black;
    text-decoration: none;
    border-radius: 5px;
    margin-top: 16px;
}

footer {
    width: 100%;
    position: absolute;
    background: linear-gradient(to bottom, #B4B396, #423C36);
    color: #f0f0f0;
    padding: 100px 0 30px;
    border-top-left-radius: 125px;
    font-size: 13px;
    line-height: 20px;
}

.row {
    width: 85%;
    margin: auto;
    display: flex;
    flex-wrap: wrap;
    align-items: flex-start;
    justify-content: space-between;
}

.col {
    flex-basis: 25%;
    padding: 10px;
}

.logo {
    width: 80px;
    margin-bottom: 30px;

}
.col h2{
    width: fit-content;
    margin-bottom: 40px;
    position: relative;
}

.email-id {
    width: fit-content;
    border-bottom: 1px solid #ccc;
    margin: 20px 0;
}

.col ul li {
    list-style: none;
    margin-bottom: 12px;

    color: white;
    transition: 0.5s;
}

.subcol  :hover{
    color: #C3492C;
    transform: scale(1.1);
    transition: 0.2s;
}

.col ul li a {
    text-decoration: none;
    color: #f0f0f0;
}

.social-icons .fa-brands {
    width: 50px;
    height: 50px;
    border-radius: 50%;
    text-align: center;
    line-height: 40px;
    font-size: 20px;
    color: #000;
    background: #f0f0f0;
    margin-right: 15px;
    cursor: pointer;
}
.social-icons .fa-solid {
    width: 50px;
    height: 50px;
    border-radius: 50%;
    text-align: center;
    line-height: 40px;
    font-size: 20px;
    color: #000;
    background: #f0f0f0;
    margin-right: 15px;
    cursor: pointer;
}

hr {
    width: 90%;
    border:0;
    border-bottom: 1px solid #ccc;
    margin: 20px auto;
}

.copyright {
    text-align: center;
}

.underline {
    width: 100%;
    height: 5px;
    background: #767676;
    border-radius: 3px;
    position: absolute;
    top: 25px;
    left: 0;
    overflow: hidden;
}

.underline span {
    width: 15px;
    height: 100%;
    background: #fff;
    border-radius: 3px;
    position: absolute;
    top: 0;
    left: 10px;
    animation: moving 2s linear infinite;
}

@keyframes moving {
    0% {
        left: -20px;
    }
    100% {
        left: 100%;
    }
}

